# codecanalyzer

./: Makefile.am  README.md  configure.ac
data/: Makefile.am
data/ui/: LICENSE.txt  mainwindow.xml
gst-libs/gst/codecparsers/: Makefile.am  gstmpegvideometa.c  gstmpegvideometa.h  gstmpegvideoparser.c  gstmpegvideoparser.h
gst/videoparsers/: Makefile.am  gstmpegvideoparse.c  gstmpegvideoparse.h  plugin.c  videoparsers_utils.c  videoparsers_utils.h
src/: Makefile.am  codecanalyzer.c  gst_analyzer.c  gst_analyzer.h  xml_parse.c  xml_parse.h
src/plugins/: Makefile.am
src/plugins/gst/analyzersink/: Makefile.am  analyzer_utils.c  analyzer_utils.h  codec_utils.c  codec_utils.h  gstanalyzersink.c  gstanalyzersink.h  mpeg_xml.c  mpeg_xml.h  plugin.c  xml_utils.c  xml_utils.h
